--- a/lesson2/followup.ipynb
+++ b/lesson2/followup.ipynb
@@ -1105,7 +1105,7 @@
    "source": [
     "# Site web\n",
     "response = requests.get(\"https://www.deezer.com/fr/artist/939\")\n",
-    "soup = BeautifulSoup(response.text)\n",
+    "soup = BeautifulSoup(response.text)https://miro.medium.com/max/4238/1*OcmVkcsM5BWRHrg8GC17iw.png\n",
     "nb_fans = int(soup.find('div', id='naboo_artist_social_small').span.text)"
    ]
   },
