--- a/INFMDI721/lesson5/DM_lesson4.ipynb
+++ b/INFMDI721/lesson5/DM_lesson4.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DM lesson4\n",
+    "# DM lesson4\n",
+    "\n",
+    "### *Thomas Mensch* (20/10/2019)\n",
     "\n",
     "Dans ce dataset: https://raw.githubusercontent.com/fspot/INFMDI-721/master/lesson5/products.csv,\n",
     "        chaque ligne correspond à un produit alimentaire mis en vente par un utilisateur.\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +128,7 @@
        "4  May contain sugar, egg and fish  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +163,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +296,7 @@
        "4  May contain sugar, egg and fish           JPY  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +384,7 @@
        "      <td>350.15</td>\n",
        "      <td>Contains gluten</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1.114136</td>\n",
+       "      <td>1.113788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -392,7 +394,7 @@
        "      <td>949.79</td>\n",
        "      <td>May contain sugar, egg and fish</td>\n",
        "      <td>JPY</td>\n",
-       "      <td>120.932224</td>\n",
+       "      <td>120.920177</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -410,11 +412,11 @@
        "0                May contain sugar          None           NaN  \n",
        "1         Contains peanut and fish          None           NaN  \n",
        "2    Ingredients: mustard and fish          None           NaN  \n",
-       "3                  Contains gluten           USD      1.114136  \n",
-       "4  May contain sugar, egg and fish           JPY    120.932224  "
+       "3                  Contains gluten           USD      1.113788  \n",
+       "4  May contain sugar, egg and fish           JPY    120.920177  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -480,8 +482,8 @@
        "      <td>350.15</td>\n",
        "      <td>Contains gluten</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1.114136</td>\n",
-       "      <td>314.279406</td>\n",
+       "      <td>1.113788</td>\n",
+       "      <td>314.377601</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -491,8 +493,8 @@
        "      <td>949.79</td>\n",
        "      <td>May contain sugar, egg and fish</td>\n",
        "      <td>JPY</td>\n",
-       "      <td>120.932224</td>\n",
-       "      <td>7.853903</td>\n",
+       "      <td>120.920177</td>\n",
+       "      <td>7.854686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
@@ -502,8 +504,8 @@
        "      <td>111.56</td>\n",
        "      <td>Contains sugar</td>\n",
        "      <td>MXN</td>\n",
-       "      <td>21.351934</td>\n",
-       "      <td>5.224819</td>\n",
+       "      <td>21.294264</td>\n",
+       "      <td>5.238970</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
@@ -513,8 +515,8 @@
        "      <td>88.05</td>\n",
        "      <td>Ingredients: sugar, milk and fish</td>\n",
        "      <td>MXN</td>\n",
-       "      <td>21.351934</td>\n",
-       "      <td>4.123748</td>\n",
+       "      <td>21.294264</td>\n",
+       "      <td>4.134916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
@@ -524,8 +526,8 @@
        "      <td>861.25</td>\n",
        "      <td>May contain peanut, sugar, milk and fish</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1.114136</td>\n",
-       "      <td>773.020529</td>\n",
+       "      <td>1.113788</td>\n",
+       "      <td>773.262057</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -540,21 +542,21 @@
        "9     tkendrew9    22.32.234.215       Pop - Club Soda Can  861.25   \n",
        "\n",
        "                                      infos currency_code  rate_to_euro  \\\n",
-       "3                           Contains gluten           USD      1.114136   \n",
-       "4           May contain sugar, egg and fish           JPY    120.932224   \n",
-       "7                            Contains sugar           MXN     21.351934   \n",
-       "8         Ingredients: sugar, milk and fish           MXN     21.351934   \n",
-       "9  May contain peanut, sugar, milk and fish           USD      1.114136   \n",
+       "3                           Contains gluten           USD      1.113788   \n",
+       "4           May contain sugar, egg and fish           JPY    120.920177   \n",
+       "7                            Contains sugar           MXN     21.294264   \n",
+       "8         Ingredients: sugar, milk and fish           MXN     21.294264   \n",
+       "9  May contain peanut, sugar, milk and fish           USD      1.113788   \n",
        "\n",
        "   price_in_euro  \n",
-       "3     314.279406  \n",
-       "4       7.853903  \n",
-       "7       5.224819  \n",
-       "8       4.123748  \n",
-       "9     773.020529  "
+       "3     314.377601  \n",
+       "4       7.854686  \n",
+       "7       5.238970  \n",
+       "8       4.134916  \n",
+       "9     773.262057  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['milk', 'egg', 'peanut', 'sugar', 'soja', 'mustard', 'fish', 'gluten']\n"
+      "['peanut', 'gluten', 'milk', 'fish', 'egg', 'soja', 'mustard', 'sugar']\n"
      ]
     }
    ],
@@ -623,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -656,14 +658,14 @@
        "      <th>rate_to_euro</th>\n",
        "      <th>price_in_euro</th>\n",
        "      <th>info_as_list</th>\n",
-       "      <th>milk</th>\n",
-       "      <th>egg</th>\n",
        "      <th>peanut</th>\n",
-       "      <th>sugar</th>\n",
+       "      <th>gluten</th>\n",
+       "      <th>milk</th>\n",
+       "      <th>fish</th>\n",
+       "      <th>egg</th>\n",
        "      <th>soja</th>\n",
        "      <th>mustard</th>\n",
-       "      <th>fish</th>\n",
-       "      <th>gluten</th>\n",
+       "      <th>sugar</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -675,17 +677,17 @@
        "      <td>350.15</td>\n",
        "      <td>Contains gluten</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1.114136</td>\n",
-       "      <td>314.279406</td>\n",
+       "      <td>1.113788</td>\n",
+       "      <td>314.377601</td>\n",
        "      <td>[contains, gluten]</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -695,17 +697,17 @@
        "      <td>949.79</td>\n",
        "      <td>May contain sugar, egg and fish</td>\n",
        "      <td>JPY</td>\n",
-       "      <td>120.932224</td>\n",
-       "      <td>7.853903</td>\n",
+       "      <td>120.920177</td>\n",
+       "      <td>7.854686</td>\n",
        "      <td>[may, contain, sugar, egg, and, fish]</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
@@ -715,17 +717,17 @@
        "      <td>111.56</td>\n",
        "      <td>Contains sugar</td>\n",
        "      <td>MXN</td>\n",
-       "      <td>21.351934</td>\n",
-       "      <td>5.224819</td>\n",
+       "      <td>21.294264</td>\n",
+       "      <td>5.238970</td>\n",
        "      <td>[contains, sugar]</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
@@ -735,17 +737,17 @@
        "      <td>88.05</td>\n",
        "      <td>Ingredients: sugar, milk and fish</td>\n",
        "      <td>MXN</td>\n",
-       "      <td>21.351934</td>\n",
-       "      <td>4.123748</td>\n",
+       "      <td>21.294264</td>\n",
+       "      <td>4.134916</td>\n",
        "      <td>[ingredients, sugar, milk, and, fish]</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
@@ -755,8 +757,8 @@
        "      <td>861.25</td>\n",
        "      <td>May contain peanut, sugar, milk and fish</td>\n",
        "      <td>USD</td>\n",
-       "      <td>1.114136</td>\n",
-       "      <td>773.020529</td>\n",
+       "      <td>1.113788</td>\n",
+       "      <td>773.262057</td>\n",
        "      <td>[may, contain, peanut, sugar, milk, and, fish]</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -764,8 +766,8 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -780,33 +782,34 @@
        "9     tkendrew9    22.32.234.215       Pop - Club Soda Can  861.25   \n",
        "\n",
        "                                      infos currency_code  rate_to_euro  \\\n",
-       "3                           Contains gluten           USD      1.114136   \n",
-       "4           May contain sugar, egg and fish           JPY    120.932224   \n",
-       "7                            Contains sugar           MXN     21.351934   \n",
-       "8         Ingredients: sugar, milk and fish           MXN     21.351934   \n",
-       "9  May contain peanut, sugar, milk and fish           USD      1.114136   \n",
+       "3                           Contains gluten           USD      1.113788   \n",
+       "4           May contain sugar, egg and fish           JPY    120.920177   \n",
+       "7                            Contains sugar           MXN     21.294264   \n",
+       "8         Ingredients: sugar, milk and fish           MXN     21.294264   \n",
+       "9  May contain peanut, sugar, milk and fish           USD      1.113788   \n",
        "\n",
-       "   price_in_euro                                    info_as_list   milk  \\\n",
-       "3     314.279406                              [contains, gluten]  False   \n",
-       "4       7.853903           [may, contain, sugar, egg, and, fish]  False   \n",
-       "7       5.224819                               [contains, sugar]  False   \n",
-       "8       4.123748           [ingredients, sugar, milk, and, fish]   True   \n",
-       "9     773.020529  [may, contain, peanut, sugar, milk, and, fish]   True   \n",
+       "   price_in_euro                                    info_as_list  peanut  \\\n",
+       "3     314.377601                              [contains, gluten]   False   \n",
+       "4       7.854686           [may, contain, sugar, egg, and, fish]   False   \n",
+       "7       5.238970                               [contains, sugar]   False   \n",
+       "8       4.134916           [ingredients, sugar, milk, and, fish]   False   \n",
+       "9     773.262057  [may, contain, peanut, sugar, milk, and, fish]    True   \n",
        "\n",
-       "     egg  peanut  sugar   soja  mustard   fish  gluten  \n",
-       "3  False   False  False  False    False  False    True  \n",
-       "4   True   False   True  False    False   True   False  \n",
-       "7  False   False   True  False    False  False   False  \n",
-       "8  False   False   True  False    False   True   False  \n",
-       "9  False    True   True  False    False   True   False  "
+       "   gluten   milk   fish    egg   soja  mustard  sugar  \n",
+       "3    True  False  False  False  False    False  False  \n",
+       "4   False  False   True   True  False    False   True  \n",
+       "7   False  False  False  False  False    False   True  \n",
+       "8   False   True   True  False  False    False   True  \n",
+       "9   False   True   True  False  False    False   True  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# build ingredient columns\n",
     "for ingredient in ingredients:\n",
     "    df2[ingredient] = df2.info_as_list.apply(lambda cell: ingredient in cell)\n",
     "    \n",
