--- a/INFMDI721/lesson5/exo_cc.ipynb
+++ b/INFMDI721/lesson5/exo_cc.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "En repartant du dataset \"people.csv\" (cf. lesson4) dans sa version \"clean\" finale:\n",
     "\n",
-    "- mettre la colonne `inactive` à `true` pour tous les users dont le `last_seen` date d'au moins un an\n",
-    "- avec une regex: filtrer les numéros de téléphone invalides\n",
-    "- ajouter une colonne indiquant si le numéro de tel correspond à un téléphone portable (06/07)\n",
-    "- ajouter une colonne indiquant si les coordonnées GPS de l'utilisateur correspondent bien au \"country\""
+    " 1. mettre la colonne `inactive` à `true` pour tous les users dont le `last_seen` date d'au moins un an\n",
+    " 2. avec une regex: filtrer les numéros de téléphone invalides\n",
+    " 3. ajouter une colonne indiquant si le numéro de tel correspond à un téléphone portable (06/07)\n",
+    " 4. ajouter une colonne indiquant si les coordonnées GPS de l'utilisateur correspondent bien au \"country\""
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Mettre la colonne inactive à true pour tous les users dont le last_seen date d'au moins un an"
+    "### 1. Mettre la colonne `inactive` à true pour tous les users dont le last_seen date d'au moins un an"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### avec une regex: filtrer les numéros de téléphone invalides"
+    "### 2. avec une regex: filtrer les numéros de téléphone invalides"
    ]
   },
   {
@@ -1051,7 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ajouter une colonne indiquant si le numéro de tel correspond à un téléphone portable (06/07)"
+    "### 3. Ajouter une colonne indiquant si le numéro de tel correspond à un téléphone portable (06/07)"
    ]
   },
   {
@@ -1255,7 +1255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Ajouter une colonne indiquant si les coordonnées GPS de l'utilisateur correspondent bien au \"country\""
+    "### 4. Ajouter une colonne indiquant si les coordonnées GPS de l'utilisateur correspondent bien au \"country\""
    ]
   },
   {
@@ -1534,7 +1534,6 @@
    ],
    "source": [
     "# country of IP address\n",
-    "\n",
     "\n",
     "def getCountryFromLonLat(x):\n",
     "\n",
